# AI-agent-for-medical

./: .gitignore  README.md  main.py  pyproject.toml  setup.txt  train_setup.txt
agent-server/: README.md  __main__.py  comms_server.py  data_server.py
agents/: .env  README.md  agents_setup.txt  main.ipynb
agents/MedicalInfoAgent/: __main__.py  agent.py  pyproject.toml  task_manager.py
agents/configs/: base.yaml
agents/modules/: QueryRetriever.py  VectorDB.py
agents/personal_info_agent/: README.md  __main__.py  agent.py
agents/scripts/: Chat.py
agents/utils/: base_agent.py  master_agent.py  server.py  task_manager.py
configs/: base.yaml  comms.yaml  data.yaml  medical-info-agent.yaml  personal-info-agent.yaml  setup.py  vectorstore.yaml
db-server/: README.md  create_db.py  pyproject.toml
demo/: README.md
demo/ui/: pyproject.toml
hosts/: README.md
llm-server/: README.md  base_model.py  pyproject.toml  server.py
mcp-server/: README.md  analytics_mcp_service.py  comms_mcp_service.py  knowledge_mcp_service.py  performance_mcp_service.py  pyproject.toml  strategy_mcp_service.py  task_mcp_service.py
modules/: Embedding.py  LLM.py  LLMChain.py  Prompt.py  VectorDB.py
remote_agents/: README.md  base_agent.py  pyproject.toml
remote_agents/agent_zoo/: __init__.py  comms_agent.py  data_agent.py  strategy_agent.py  task_agent.py
remote_agents/utils/: query_retrievers.py  server.py  task_manager.py
scripts/: Chat.py
train/: Inference.ipynb  PEFT_LoRa.ipynb
train/Hermes-3-Llama-3.2-3B-Finetuned/: README.md  adapter_config.json
utils/: helper_func.py  query_retriever.py
