[project]
name = "MCP-Server"
version = "0.1.1"
description = "AI tools using MCP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]",
    "openai-agents"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
